--- a/mypage.html
+++ b/mypage.html
@@ -114,7 +114,7 @@
         var url = window.localStorage.getItem('url');
         document.getElementById('loc_url').textContent = url;
         var dob = window.localStorage.getItem('dob');
-        document.getElementById('loc_dob').textContent = url;
+        document.getElementById('loc_dob').textContent = dob;
         var comment = window.localStorage.getItem('comment');
         document.getElementById('loc_cmnt').textContent = comment;
         var title = window.localStorage.getItem('title');
