--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
       <div class="contact-container">
         <form action="">
           <div class="row">
-            <h2 style="text-align:center">Get in touch</h2>
+            <h2 style="text-align:center">Lets get connected!</h2>
             <div class="vl">
               
             </div>
